--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="Photographie par Ryoji Iwata, Vue Paysage">
+                <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="Photographie par Ryoji Iwata, Vue Paysage" width="1920" height="1080">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="Photographie par Nicholas Green, Vue Paysage">
+                <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="Photographie par Nicholas Green, Vue Paysage" width="1920" height="1080">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="Photographie par Edward Cisneros, Vue Paysage">
+                <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="Photographie par Edward Cisneros, Vue Paysage" width="1920" height="1080">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="Previous slide">
@@ -76,7 +76,7 @@
 </div>
 <div id="about">
     <div class="picture left">
-        <img src="./assets/images/nina.png" alt="Portrait de Nina Carducci, Photographe Professionnelle">
+        <img src="./assets/images/nina.png" alt="Portrait de Nina Carducci, Photographe Professionnelle" width="800" height="600" loading="lazy">
     </div>
     <div id="about-me">
         <h2 class="about-me__title">À propos de moi</h2>
@@ -89,15 +89,15 @@
     <h2 class="title">Portfolio</h2>
     <div class="container py-3">
         <div class="gallery" style="display: none">
-            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="Concert - Photographie par Aaron Paul" loading="lazy"/>
-            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="Entreprise - Photographie par Ali Morshedlou" loading="lazy"/>
-            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="Entreprise - Photographie par Jason Goodman" loading="lazy"/>
-            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="Mariage - Photographie par Hannah Busing" loading="lazy"/>
-            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="Portrait - Photographie par Ade Tunji" loading="lazy"/>
-            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="Mariage - Photographie par Jakob Owens" loading="lazy"/>
-            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="Portrait - Photographie par Nino Van Prattenburg" loading="lazy"/>
-            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="Concert - Photographie par Austin Neill" loading="lazy"/>
-            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="Entreprise - Photographie par Mateus Campos Felipe" loading="lazy"/>
+            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="Concert - Photographie par Aaron Paul" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="Entreprise - Photographie par Ali Morshedlou" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="Entreprise - Photographie par Jason Goodman" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="Mariage - Photographie par Hannah Busing" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="Portrait - Photographie par Ade Tunji" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="Mariage - Photographie par Jakob Owens" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="Portrait - Photographie par Nino Van Prattenburg" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="Concert - Photographie par Austin Neill" loading="lazy" width="800" height="600"/>
+            <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="Entreprise - Photographie par Mateus Campos Felipe" loading="lazy" width="800" height="600"/>
         </div>
     </div>
     <div class="quote">
@@ -168,7 +168,7 @@
             </form>
         </div>
         <div class="picture right">
-            <img src="./assets/images/camera.png" alt="Appareil photo utilisé par Nina Carducci">
+            <img src="./assets/images/camera.png" alt="Appareil photo utilisé par Nina Carducci" loading="lazy" width="800" height="600">
         </div>
     </div>
 </div>
