--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Nina Carducci - Photographe Professionnelle</title>
-    <meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée en portraits, mariages, concerts, et photographies d'entreprise.">
+    <title>Nina Carducci - Professional Photographer | Portraits, Weddings, Events in France</title>
+    <meta name="description" content="Explore Nina Carducci's professional photography services, specializing in portraits, weddings, and corporate events across France. Book your session today!">
     
     <!-- Favicon -->
     <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
@@ -29,7 +29,19 @@
       "url": "https://votre-site.com",
       "sameAs": [
         "https://www.instagram.com/ninacarducci.photo/?hl=fr"
-      ]
+      ],
+      "alumniOf": "École Nationale Supérieure de la Photographie",
+      "knowsAbout": ["Portrait Photography", "Wedding Photography", "Event Photography", "Corporate Photography"],
+      "offers": {
+        "@type": "Offer",
+        "priceCurrency": "EUR",
+        "price": "350.00",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Shooting photo",
+          "description": "Professional photoshoots for your most precious moments, available in Île-de-France."
+        }
+      }
     }
     </script>
 </head>
@@ -55,13 +67,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="Photographie par Ryoji Iwata, Vue Paysage" width="1920" height="1080">
+                <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="Landscape Photography by Ryoji Iwata" width="1920" height="1080">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="Photographie par Nicholas Green, Vue Paysage" width="1920" height="1080">
+                <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="Landscape Photography by Nicholas Green" width="1920" height="1080">
             </div>
             <div class="carousel-item">
-                <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="Photographie par Edward Cisneros, Vue Paysage" width="1920" height="1080">
+                <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="Landscape Photography by Edward Cisneros" width="1920" height="1080">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" aria-label="Previous slide">
@@ -159,11 +171,11 @@
             <p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
             <form action="" method="post">
                 <label for="nom">Nom</label>
-                <input type="text" name="nom" id="nom">
+                <input type="text" name="nom" id="nom" required>
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" required>
                 <label for="message">Message</label>
-                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <textarea name="message" id="message" cols="30" rows="10" required></textarea>
                 <input type="submit" value="Envoyer"/>
             </form>
         </div>
@@ -172,6 +184,9 @@
         </div>
     </div>
 </div>
+
+<!-- Canonical Link -->
+<link rel="canonical" href="https://votre-site.com">
 
 <!-- Scripts -->
 <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
