--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 <div id="about">
     <div class="picture left">
-        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci, photographe professionnelle" loading="lazy" width="374" height="329"> 
+        <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci, photographe professionnelle" loading="lazy" height="554"> 
     </div>
     <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
