--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
     <meta name="description" content="Nina Carducci, photographe professionnelle spécialisée en shooting photo, retouches et albums personnalisés. Basée en Île-de-France, je capture vos moments précieux avec passion et expertise.">
 </head>
 <body>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Nina Carducci",
+            "image": "https://nina-carducci.github.io/assets/images/nina.png",
+            "@id": "https://nina-carducci.github.io/",
+            "url": "https://nina-carducci.github.io/",
+            "telephone": "+33-5-56-67-78-89",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "68 avenue Alsace-Lorraine",
+                "addressLocality": "Bordeaux",
+                "postalCode": "33200",
+                "addressCountry": "FR"
+            },
+            "openingHoursSpecification": {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": [
+                    "Monday",
+                    "Tuesday",
+                    "Wednesday",
+                    "Thursday",
+                    "Friday"
+                ],
+                "opens": "10:00",
+                "closes": "19:00"
+            }
+        }
+        </script>
     <div class="top-header">
         <h3 class="name">Nina Carducci</h3>
         <div class="nav">   
