--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nina Carducci - Photographe professionnelle en Île-de-France</title>
     <meta name="description" content="Nina Carducci, photographe professionnelle spécialisée en shooting photo, retouches et albums personnalisés. Basée en Île-de-France, je capture vos moments précieux avec passion et expertise.">
+    
+    <meta property="og:site_name" content="Nina Carducci Photographe" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ninacarducci.github.io" />
+    <meta property="og:title" content="Nina Carducci - Photographe professionnelle" />
+    <meta property="og:description" content="Découvrez mon portfolio et mes services de photographie professionnelle en Île-de-France." />
+    <meta property="og:image" content="https://ninacarducci.github.io/assets/images/nina.webp" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NinaCarducciPhoto" />
+    <meta name="twitter:title" content="Nina Carducci - Photographe professionnelle" />
+    <meta name="twitter:description" content="Explorez mon travail de photographie professionnelle et mes services pour vos événements et portraits." />
+    <meta name="twitter:image" content="https://ninacarducci.github.io/assets/images/nina.webp" />
+    <meta name="twitter:url" content="https://ninacarducci.github.io/" />
+
 
     <link rel="preload" href="./assets/bootstrap/bootstrap.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -15,6 +30,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v3/UCvCO3FwrcS8pX-cDB7KCQ.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -83,6 +99,7 @@
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <i class="fa-solid fa-chevron-right"></i>
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
@@ -208,3 +225,13 @@
 
 </body>
 </html>
+
+
+
+<h1>Portfolio de Nina Carducci</h1>
+<p>Photographe professionnelle</p>
+<h1>À propos de moi</h1>
+<p>Devenir photographe était une évidence...</p>
+<h3>Mes services</h3>
+<p>Offre complète de services...</p>
+
