vraiment last normalement

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                 ],
                 "opens": "10:00",
                 "closes": "19:00"
-            }
+            },
+            "priceRange": "50€ - 400€"
         }
-    </script>
+        </script>
 
     <header class="top-header" role="banner">
         <h1 class="name">Nina Carducci</h1>
